--- a/.github/config.yml
+++ b/.github/config.yml
@@ -3,7 +3,7 @@
 # *OPTIONAL* Comment to reply with
 # Can be either a string :
 requestInfoReplyComment: >
-  We would appreciate it if you could provide us with more info about this issue/pr!
+  - You created a PR but there is no explanation, please include some description.
 
 # Or an array:
 # requestInfoReplyComment:
